tests/baselines/reference/genericReversingTypeParameters2.errors.txt
tests/cases/compiler/genericReversingTypeParameters2.ts(8,9): error TS2684: The 'this' context of type 'BiMap<string, number>' is not assignable to method's 'this' of type 'BiMap<K, V>'.
  Type 'string' is not assignable to type 'K'.
    'K' could be instantiated with an arbitrary type which could be unrelated to 'string'.
tests/cases/compiler/genericReversingTypeParameters2.ts(9,11): error TS2684: The 'this' context of type 'BiMap<number, string>' is not assignable to method's 'this' of type 'BiMap<K, V>'.
  Type 'number' is not assignable to type 'K'.
    'K' could be instantiated with an arbitrary type which could be unrelated to 'number'.


==== tests/cases/compiler/genericReversingTypeParameters2.ts (2 errors) ====
    class BiMap<K, V> {
        private inverseBiMap: BiMap<V, K>;
        public get(key: K): V { return null; }
        public inverse(): BiMap<V, K> { return null; }
    }
    
    var b = new BiMap<string, number>();
    var i = b.inverse(); // used to get the type wrong here.
            ~
!!! error TS2684: The 'this' context of type 'BiMap<string, number>' is not assignable to method's 'this' of type 'BiMap<K, V>'.
!!! error TS2684:   Type 'string' is not assignable to type 'K'.
!!! error TS2684:     'K' could be instantiated with an arbitrary type which could be unrelated to 'string'.
    var r2b = i.get(1); 
              ~
!!! error TS2684: The 'this' context of type 'BiMap<number, string>' is not assignable to method's 'this' of type 'BiMap<K, V>'.
!!! error TS2684:   Type 'number' is not assignable to type 'K'.
!!! error TS2684:     'K' could be instantiated with an arbitrary type which could be unrelated to 'number'.